--- a/about.html
+++ b/about.html
@@ -10,8 +10,9 @@
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
+        <li><a href="./offer.html">About</a></li>
         <li><a href="./about.html">About</a></li>
-        
+
       </ul>
     </nav>
     <section>
